[package]
name = "cw-json"
version = "0.1.0"
authors = ["Anshudhar Kumar Singh <anshudhar2001@gmail.com>"]
edition = "2021"

description = "JSON Parser for CosmWasm using serde_cw_value"
repository = "https://github.com/SlayerAnsh/cw-json"
readme = "README.md"
keywords = ["serde","wasm", "json"]

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
serde-cw-value = "0.7.0"


[dev-dependencies]
serde_derive = "^1.0.0"